# qidi-printer-mcp

./: .cursorrules  .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
tests/: test_server.py
