[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "qidi-printer-mcp"
version = "1.0.2"
description = "QIDI 3D Printer MCP server. Controls QIDI 4 Max Combo via Moonraker REST API. Tools: printer status, temperatures, start/pause/resume/cancel print, list files, send gcode, preheat. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "meok", "ai", "3d-printer", "qidi", "moonraker", "klipper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/qidi-printer-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
qidi_printer_mcp = "server:main"
